--- a/ch04_nonparametric_filters/第四章-非参数滤波.ipynb
+++ b/ch04_nonparametric_filters/第四章-非参数滤波.ipynb
@@ -256,6 +256,7 @@
     "P_0 = P_0/sum\n",
     "\n",
     "P_0_s = np.zeros((X.size, Y.size))\n",
+    "sum = 0\n",
     "for i in range(X.size):\n",
     "    for j in range(Y.size):\n",
     "        for k in range(Theta.size):\n",
